support -XX:+PrintGCDateStamps for G1 collector